<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="all_watchlist">All Watchlist</string>
    <string name="add_symbol">Add Symbol</string>
    <string name="watchlist">Watchlist</string>
    <string name="stream">Stream</string>
    <string name="search">Search</string>
    <string name="chat">Chat</string>
    <string name="portfolio">Portfolio</string>
    <string name="error_title">Whoops!</string>
    <string name="error_desc">Something went wrong! Please check your internet connection.</string>
    <string name="empty_title">No Data</string>
    <string name="empty_desc">No data to be displayed</string>
</resources>